DOF Distance (pick) causes crash #60781

Closed
opened 2019-01-23 04:42:11 +01:00 by Joao Morgado · 3 comments

System Information
Operating system: Windows 10 Pro
Graphics card: NVidia 1050 ti

Blender Version
Broken: 2.80, 7f40d553f9, 2019-01-22

Short description of error
Using the right click menu option "DOF Distance (pick)" causes blender to crash

Exact steps for others to reproduce the error

  • Start new scene
  • Select camera
  • Hit numpad 0 to look through camera
  • Right click and select the option "DOF Distance (pick)"
  • Blender crashes
**System Information** Operating system: Windows 10 Pro Graphics card: NVidia 1050 ti **Blender Version** Broken: 2.80, 7f40d553f903, 2019-01-22 **Short description of error** Using the right click menu option "DOF Distance (pick)" causes blender to crash **Exact steps for others to reproduce the error** - Start new scene - Select camera - Hit numpad 0 to look through camera - Right click and select the option "DOF Distance (pick)" - Blender crashes
Author

Added subscriber: @MrJoMo

Added subscriber: @MrJoMo

This issue was referenced by 2e5663c2c6

This issue was referenced by 2e5663c2c6c7447247968c585b6cd88522acfb79

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60781
No description provided.