Fix T60781: DOF Distance (pick) crashes

From own recent changes c8e75c2b00cfb7e8